--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,60 +1,89 @@
-Privacy Policy and Terms of Service for Expense Note
-Last Updated: Feb 9, 2026
-This Privacy Policy explains how Expense Note collects, uses, and discloses information when you use our mobile application.
-We take your privacy seriously. Your personal expense notes and entries are stored securely on your device or in your personal cloud storage (e.g., Google Drive) and are NOT accessed, collected, or stored by us.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Expense Note</title>
+    <style>
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; color: #333; max-width: 850px; margin: 0 auto; padding: 20px; }
+        h1 { color: #2c3e50; border-bottom: 2px solid #eee; padding-bottom: 10px; }
+        h2 { color: #2980b9; margin-top: 30px; }
+        h3 { color: #34495e; }
+        .last-updated { font-style: italic; color: #7f8c8d; margin-bottom: 30px; }
+        table { width: 100%; border-collapse: collapse; margin: 20px 0; font-size: 0.9em; }
+        th, td { border: 1px solid #dfe6e9; padding: 12px; text-align: left; }
+        th { background-color: #f8f9fa; color: #2c3e50; }
+        .important-box { background-color: #f0f7ff; border-left: 5px solid #3498db; padding: 15px; margin: 20px 0; }
+        footer { margin-top: 50px; padding-top: 20px; border-top: 1px solid #eee; text-align: center; font-size: 0.9em; }
+        a { color: #3498db; text-decoration: none; }
+    </style>
+</head>
+<body>
 
-1. Data Collected By The App Developer
-Your application is designed to collect the absolute minimum amount of information necessary for the core features (sign-in and subscriptions) to function.
-Data Type
-How Collected
-Purpose (Why Collected)
-Google User ID (Unique Identifier)
-Automatically upon successful use of "Sign in with Google."
-To create a unique and secure account for you within the App and to link your subscription status and purchase history to your account.
-Google Account Email (Used for Sign-In)
-Automatically upon successful use of "Sign in with Google."
-To verify your identity, send necessary account-related messages (like subscription renewal confirmations, if applicable), and to authenticate your subscription.
-Purchase History
-Processed via the app store payment system (Google Play).
-To verify your current subscription status, provide the service you paid for, and manage renewals or cancellations.
+    <h1>Privacy Policy and Terms of Service</h1>
+    <p class="last-updated">Last Updated: February 9, 2026</p>
 
+    <p>This Privacy Policy explains how <strong>Expense Note</strong> collects, uses, and discloses information when you use our mobile application. We take your privacy seriously. Your personal expense notes and entries are stored securely on your device or in your personal cloud storage (e.g., Google Drive) and are <strong>NOT</strong> accessed, collected, or stored by the developer.</p>
 
-2. Information NOT Collected or Stored By the App
-Crucially, we do NOT collect, store, or access the following data:
-User-Generated Content: Your daily expense notes, entry details, category names, or any data entered into the note-taking feature. This data remains on your device or in your personal Google account storage.
-Sensitive Personal Information: Financial details (beyond payment verification handled by Google Play), health data, precise location data, or contact information (other than your Sign-In email).
+    <div class="important-box">
+        <strong>Note for Google Drive Users:</strong> Our app uses the <code>drive.file</code> scope to allow you to back up your data. We only access the specific backup files created by this app and cannot see or modify any other files in your Google Drive.
+    </div>
 
-3. Data Collected by Third-Party Services
-We use third-party services that may collect certain data from your device to provide their services, such as advertising and security. These parties are subject to their own privacy policies.
-A. Google AdMob (Advertising)
-The App uses Google AdMob to display advertisements and generate revenue. AdMob automatically collects data to serve personalized and non-personalized ads, and for advertising analytics, and fraud prevention.
-Data Type Collected by AdMob
-Purpose (Why Collected by AdMob)
-Device/Account Identifiers (e.g., Advertising ID, App Set ID, IP address)
-For advertising (personalized/non-personalized), analytics, and fraud detection.
-User Product Interactions (e.g., app launches, taps, video views)
-To measure the performance of ad campaigns and improve ad delivery.
-Diagnostic Information (e.g., crash logs, performance data)
-To maintain the stability and performance of the advertising SDK.
+    <h2>1. Data Collected By The App Developer</h2>
+    <p>The app collects the absolute minimum information necessary for core features (sign-in and subscriptions) to function.</p>
 
-AdMob requires us to provide you with the following link to their privacy practices: How Google uses information from sites or apps that use our services
-B. Google Play Billing
-The Google Play Store processes all subscription purchases. We rely on Google Play's service to verify your subscription status. Google processes your payment information (e.g., credit card details) as per their own Google Payments Privacy Policy. We do not receive or store your credit card or full payment information.
+    <table>
+        <thead>
+            <tr>
+                <th>Data Type</th>
+                <th>How Collected</th>
+                <th>Purpose</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Google User ID</td>
+                <td>Automatically via Google Sign-In</td>
+                <td>To create a secure account and link your subscription history.</td>
+            </tr>
+            <tr>
+                <td>Google Account Email</td>
+                <td>Automatically via Google Sign-In</td>
+                <td>To verify identity, authenticate subscriptions, and send account-related alerts.</td>
+            </tr>
+            <tr>
+                <td>Purchase History</td>
+                <td>Processed via Google Play</td>
+                <td>To verify subscription status and manage renewals or cancellations.</td>
+            </tr>
+        </tbody>
+    </table>
 
+    <h2>2. Information NOT Collected or Stored</h2>
+    <ul>
+        <li><strong>User-Generated Content:</strong> Your daily expense notes, entry details, and categories remain on your device or your personal Google Drive.</li>
+        <li><strong>Sensitive Financial Data:</strong> We do not receive or store your credit card or full payment information; this is handled exclusively by Google Play.</li>
+    </ul>
 
-4. Data Security
-We implement commercially reasonable technical and administrative security measures to protect the personal information we collect (mainly your Google User ID and email) from unauthorized access, disclosure, alteration, or destruction. However, no method of transmission over the Internet or method of electronic storage is 100% secure.
+    <h2>3. Third-Party Services</h2>
+    <h3>A. Google AdMob (Advertising)</h3>
+    <p>We use AdMob to serve ads. AdMob may collect Device Identifiers, User Interactions, and Diagnostic info to maintain ad performance and fraud prevention. For more info, see <a href="https://policies.google.com/technologies/partner-sites" target="_blank">How Google uses information</a>.</p>
+    
+    <h3>B. Google Play Billing</h3>
+    <p>All purchases are processed through Google Play's secure systems.</p>
 
-5. Changes to This Privacy Policy
-We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Last Updated" date at the top. You are advised to review this Privacy Policy periodically for any changes.
+    <h2>4. Data Security</h2>
+    <p>We implement commercially reasonable security measures to protect your Google User ID and email. However, no method of electronic storage is 100% secure.</p>
 
-6. Contact Us
-If you have any questions about this Privacy Policy, please contact us:
-By Email: vvrandroid@gmail.com
+    <h2>5. Disclaimer and Limitation of Liability</h2>
+    <p><strong>"As-Is" Basis:</strong> The App is provided without warranties of any kind. You are solely responsible for maintaining regular backups. The Developer is not responsible for any loss or corruption of your data.</p>
 
-7. Disclaimer and Limitation of Liability
-"As-Is" Basis: The App is provided on an "AS IS" and "AS AVAILABLE" basis. The Developer makes no warranties, expressed or implied, regarding the reliability or availability of the App or its features.
-User Responsibility for Data: You acknowledge that your expense notes and entries are stored locally on your device or your personal Google Drive. You are solely responsible for maintaining regular backups of your data. The Developer is not responsible for any loss, corruption, or recovery of your data under any circumstances.
-Updates and Changes: We reserve the right to update, modify, or discontinue features of the App at any time. You acknowledge that software updates may occasionally result in unintended data loss or changes to how the App functions. By continuing to use the App after an update, you accept these risks.
-Limitation of Liability: To the maximum extent permitted by law, the Developer shall not be liable for any damages (including, but not limited to, loss of data, financial loss, or incidental damages) arising from the use of the App, even if such issues arise from unintentional errors or bugs in the software.
+    <h2>6. Contact Us</h2>
+    <p>By Email: <a href="mailto:vvrandroid@gmail.com">vvrandroid@gmail.com</a></p>
 
+    <footer>
+        <p>&copy; 2026 VVRAndroid | <a href="index.html">Back to Home</a></p>
+    </footer>
+
+</body>
+</html>
